linux(4): Preserve fpu xsave state across signal delivery on amd64

PR:			270247
Reviewed by:		kib
Differential Revision:	https://reviews.freebsd.org/D40444
MFC after:		2 weeks